update fonnte whatsapp services

--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "report:weekly": "node manual-scheduler.js weekly",
+    "report:monthly": "node manual-scheduler.js monthly",
+    "scheduler:start": "node scheduler-standalone.js",
+    "scheduler:test": "node test-scheduler.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -40,6 +44,7 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.38.5",
     "@types/node": "^20.6.2",
+    "@types/node-cron": "^3.0.11",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.15",
@@ -48,21 +53,26 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
+    "dotenv": "^17.0.0",
     "embla-carousel-react": "^8.3.0",
     "eslint": "^8.49.0",
     "eslint-config-next": "^14.0.0",
     "input-otp": "^1.2.4",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.446.0",
     "next": "^14.0.0",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
+    "node-cron": "^4.1.1",
+    "node-fetch": "^3.3.2",
     "postcss": "^8.4.30",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
-    "recharts": "^2.12.7",
+    "recharts": "^2.15.4",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.3.3",
